2016-09-10 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * use tins < 1.7.0 for ruby < 2.0
  * revert temporary fix for travis issue #1793
  * use json_pure < 2.0.0 for ruby < 2.0
  * added acceptance tests to test package_settings
  * fixed typo in Vagrantfile
2016-06-24 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * minor revision to README.md
2016-05-24 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * initially implemented acceptance testing machinery
2016-05-23 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * updated Vagrantfile to use ptomulik/freebsd-* boxes from atlas.hashicorp.com
2016-05-19 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.6
  * corrected project_site url in metadata.json
  * adjustments to Gemfile (bundle install now works on ruby 1.8 again)
  * adjustments to .travis.yml (more versions to test)
  * release 0.1.5
  * mentioned dependency on port-maintenance-tools to README.md
  * added Vagrantfile for easy manual testing
  * release 0.1.4
  * removed deprecated Modulefile
  * add operatingsystem_support to metadata.json
  * release 0.1.3
  * added metadata.json to support puppet4
  * fixed .gitignore to be compatible with "puppet module build"
  * removed trailing whitespaces from sources
2014-02-09 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.2
  * added navigation links to table of contents in README.md
  * revised README.md
2014-01-21 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * fixed hyperlink text in README.md
2014-01-19 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.1.1
  * fixed wrong CLI syntax in uninstall action
  * release 0.1.0
  * decouple the provider from :freebsd
  * release 0.0.3
  * make the module dependent on ptomulik-portsutil >= 0.0.3
  * comment out defaultfor :operatingsystem => freebsd
  * fixed documentation in README.md
2014-01-18 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
  * release 0.0.2
  * make the module dependent on ptomulik-portsutil >= 0.0.2
  * release 0.0.1
  * initial commit