@@ -1,5 +1,6 @@
 require 'beaker-rspec'
 require 'beaker-rspec/helpers/serverspec'
+require 'specinfra_patch'
 
 # Install Puppet on all hosts
 hosts.each do |host|
