@@ -1,3 +1,5 @@
+2016-09-11 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+  * patch specinfra so that acceptance tests work on FreeBSD 9.3 + pkgng
 2016-09-10 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
   * use tins < 1.7.0 for ruby < 2.0
   * revert temporary fix for travis issue #1793
